2001-06-02  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/price-scatter.scm: same as below

	* src/scm/prefs.scm: same as below

	* src/gnc-ui-util.c: same as below

	* src/gnome/druid-qif-import.c: same as below

	* src/gnome/dialog-price-editor.c: same as below

	* src/gnome/dialog-fincalc.c: same as below

	* src/SplitLedger.c: use gnc_default_currency instead
	of gnc_locale_default_currency.

	* src/scm/options-utilities.scm: use new func

	* src/scm/report/transaction-report.scm: handle splits with no
	account

	* src/gnome/dialog-account.c: use new func

	* src/gnome/window-main-summarybar.c: use new func

	* src/guile/gnc.gwp: wrap new func below

	* src/guile/global-options.c (gnc_default_currency): new func
	to return user-set default currency

	* src/engine/gnc-book.c (gnc_book_backup_file): use g_free
	instead of free.

2001-06-02  Christian Stimming  <stimming@tuhh.de>

	* po/gnc-glossary.txt: Updated glossary, 15 new terms, and lots of
	explanations. Feedback welcome.

2001-06-02  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-date-picker.c (gnc_date_picker_new):
	fix bug

	* src/SplitLedger.c: fix mem leak

	* src/gnome/top-level.c: handle X errors ourselves

2001-06-01  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.c: use new scanf macro below

	* src/engine/sixtp-dom-parsers.c (string_to_integer): use new
	scanf macro below

	* src/engine/sixtp-utils.c: use new scanf macro below

	* src/engine/gnc-numeric.c: use new scanf macro below

	* src/engine/gnc-engine-util.h: define GNC_SCANF_LLD macro to use
	for scanf long long int conversion. This is needed since there is
	not a common solution between Linux, Solaris, and FreeBSD. Thanks
	to Matthew Condell for finding the problem and to Matt and Alan
	Orndorff for testing it.

	* configure.in: invoke conversion test below

	* acinclude.m4: add test for %lld scanf conversion

	* README: update info

2001-06-01  Robert Graham Merkel  <rgmerk@mira.net>
